--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.1",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
